# fetch_tool

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  Containerfile  Dockerfile  Dockerfile.fetch_tool  Makefile  README.md  conda_environment.yml  docker_push.sh  docker_trigger_build.sh  fetch_assemblies.py  fetchdata-config-default.json  fetchdata-config-template.json  install-aspera.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  test.yml
ansible/prod_install/: README  prod-inventory
ansible/prod_install/playbooks/: install.retry  install.yml
ansible/prod_install/playbooks/roles/fetch_tool/: README
ansible/prod_install/playbooks/roles/fetch_tool/defaults/: main.yml
ansible/prod_install/playbooks/roles/fetch_tool/tasks/: main.yml
ansible/prod_install/playbooks/roles/fetch_tool/vars/: main.yml
config/: fetchdata-config-default.json  fetchdata-config-template.json  testing.json
fetch_data/: ENAAPIUtils.json  ENAAPIUtils.py  fetch_assemblies.py  fetch_data.py  oracle_db_access_object.py  oracle_db_connection.py  rename_fasta_header_util.py
fetchtool/: ENAAPIUtils.py  ENADAO.py  ERADAO.py  __init__.py  abstract_fetch.py  exceptions.py  fetch_assemblies.py  fetch_reads.py  oracle_db_access_object.py  oracle_db_connection.py
src/: ENAAPIUtils.py  ENADAO.py  ERADAO.py  abstract_fetch.py  abstract_fetch_assemblies.py  abstract_fetch_reads.py  exceptions.py  fetch_assemblies.py  fetch_reads.py  oracle_db_access_object.py  rename_fasta_header_util.py  test_portal.py
tests/: conftest.py  test_calls.txt  test_fetch_reads.py
tests/ERP022256/: ERP022256.txt  download
tests/fixtures/: ERP003634.txt  ERP003634_runs.txt
tests/fixtures/ERP003634/: ERP003634.txt
tests/fixtures/ERP104225/: ERP104225.txt
tests/fixtures/config/: complete.json  partial.json
tests/integration/: test_fetch_read_tool.py  test_int_fetch_assemblies.py  test_int_fetch_reads.py
tests/unit/: test_abstract_fetch_assemblies.py  test_abstract_fetch_reads.py  test_config_loading.py  test_fetch_assemblies.py  test_fetch_reads.py
