[project]
name = "fetch-tool"
readme = "README.md"
authors = [
  {name = "MGnify team", email = "metagenomics-help@ebi.ac.uk"},
]
license = {text = "Apache Software License 2.0"}
keywords = ["bioinformatics", "tool", "metagenomics"]
dynamic = ["version"]
description = "Utility to fetch public and private RAW read and assembly files from the ENA"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests==2.32.3",
    "flufl.lock==8.1.0",
    "pandas==2.2.2",
    "boto3==1.34.134",
    "tenacity==8.4.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.3.3",
    "black==23.7.0",
    "ruff==v0.0.286",
    "isort==5.12.0",
    "bump-my-version==0.9.2",
]
test = [
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "flaky==3.7.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fetchtool"]

[tool.setuptools.dynamic]
version = {attr = "fetchtool.__version__"}

[project.scripts]
fetch-assembly-tool = "fetchtool.fetch_assemblies:main"
fetch-read-tool = "fetchtool.fetch_reads:main"

[tool.ruff]
ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101", # flake8-bandit assert
    "S308", # flake8-bandit suspicious-mark-safe-usage
    "E501", # pycodestyle line-too-long
]
line-length = 140
src = ["fetchtool", "tests"]
target-version = "py38"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.isort]
forced-separate = ["conftest"]
force-single-line = true

[tool.black]
line-length = 140
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "1.0.4"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "fetchtool/__init__.py"

[[tool.bumpversion.files]]
filename = "Containerfile"
